[metadata]
name = HA-todo
version = 0.0.1
author = Neopect
author_email = tyler@tylermoen.com
description = The todo module for home-adiutor
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/North-Pole-Neon/HA-todo
project_urls =
    Bug Tracker = https://github.com/North-Pole-Neon/HA-todo/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GPLv3 License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src